--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,6 @@
 }
 
 .slider {
-  width: 100%;
   height: auto;
   margin: auto;
   overflow: hidden;
@@ -48,7 +47,7 @@
 .slider .slide-track {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 30px;
   animation: scroll 5s linear infinite;
   -webkit-animation: scroll 20s linear infinite;
   width: calc(200px * 14);
@@ -58,6 +57,9 @@
   width: 200px;
 }
 
+.slider .slide img {
+  width: 100%;
+}
 
 @keyframes scroll {
   0% {
@@ -69,7 +71,6 @@
       transform: translateX(calc(-200px * 7));
   }
 }
-
 
 #contact{
   background-image: url("../../public/bg/bg-singUp.png");
